# vision-communication-archive

./: .gitignore
KuroProject/kuro_dynamixel/: CMakeLists.txt  package.xml
KuroProject/kuro_dynamixel/config/: kuro_dynamixel_manager.yaml
KuroProject/kuro_dynamixel/include/kuro_dynamixel/: joint.hpp
KuroProject/kuro_dynamixel/include/kuro_dynamixel/joint/: body_joints.hpp  leg_joints.hpp
KuroProject/kuro_dynamixel/include/kuro_dynamixel/packet/: packet.hpp  sync_write_packet.hpp
KuroProject/kuro_dynamixel/src/: kuro_dynamixel_manager.cpp
KuroProject/kuro_dynamixel/src/kuro_dynamixel/: serial.cpp
KuroProject/kuro_dynamixel/src/kuro_dynamixel/joint/: body_joints.cpp  head_joints.cpp  joint.cpp  leg_joints.cpp
KuroProject/kuro_dynamixel/src/kuro_dynamixel/packet/: sync_write_packet.cpp
KuroProject/kuro_vision/: package.xml
KuroProject/kuro_vision/include/kuro_vision/: device.hpp
KuroProject/kuro_vision/include/kuro_vision/device/: camera.hpp
KuroProject/kuro_vision/src/: camera_main.cpp  image_viewer_main.cpp
KuroProject/kuro_vision/src/kuro_vision/: camera_manager.cpp
KuroProject/kuro_workspace/: .gitignore  setup.sh
KuroProject/kuro_workspace/python/: ioutils.py  kuro.py  kuro_clone.py  kuro_commit.py  kuro_kill.py  kuro_pull_all.py  kuro_push.py  kuro_reset.py  kuro_reset_all.py  kuro_run.py  kuro_view_all.py
SerialCommunication(Arduino)/: CMakeLists.txt  SerialCommunication.cpp
SerialCommunication/SerialCommunication(Arduino)/: SerialCommunication.cpp
SerialCommunication/SerialCommunication(Arduino)/SerCom.ino/: SerCom.ino.ino
SerialCommunication/SerialCommunicationCM/: CMakeLists.txt
SerialCommunicationCM/: sc  scCM(Boost).cpp  scCM(nonBoost).cpp
UDPCommunication/UDPforGameController/: UDPreceiver.cpp
UDPCommunication/newUDP/: Client.cpp  server
UDPboostAsio/: Server.cpp
UDPforGameController/: CMakeLists.txt  Client.cpp  UDPreceiver.cpp
Vision/visionOpenCV/: CMakeLists.txt  cam.cpp  cam2.cpp
Vision/visionV4L/: CMakeLists.txt  cam.cpp
intern-communication/: client.cpp  client.py  server.cpp  server.py
kuro_dynamixel/: CMakeLists.txt  README.md  package.xml
kuro_dynamixel/include/kuro_dynamixel/: dynamixel_manager.hpp  mx_servo.hpp  packet.hpp  serial.hpp
kuro_dynamixel/include/kuro_dynamixel/joint/: arm_joints.hpp  head_joints.hpp  joint.hpp
kuro_dynamixel/include/kuro_dynamixel/packet/: write_packet.hpp
kuro_dynamixel/src/: dynamixel_main.cpp  kuro_dynamixel_manager.cpp
kuro_dynamixel/src/kuro_dynamixel/: dynamixel_manager.cpp  mx_servo.cpp  packet.cpp  serial.cpp
kuro_dynamixel/src/kuro_dynamixel/joint/: arm_joints.cpp
kuro_dynamixel/src/kuro_dynamixel/packet/: packet.cpp  write_packet.cpp
kuro_vision/: CMakeLists.txt  Readme.md
kuro_vision/config/: camera_manager.yaml
kuro_vision/include/kuro_vision/: camera_manager.hpp
kuro_vision/src/kuro_vision/device/: camera.cpp
kuro_workspace/: kuro.sh  run.sh  view.sh
kuro_workspace/python/: kuro_build.py  kuro_clean.py  kuro_clone.py  kuro_clone_all.py  kuro_kill_all.py  kuro_log.py  kuro_pull.py  kuro_push_all.py  kuro_status.py  kuro_status_all.py  kuro_view.py  pkgutils.py
newUDP/: Client.cpp  Server.cpp  client  server
visionOpenCV/: CMakeLists.txt  cam.cpp  cam2.cpp
visionV4L/: cam2  cam2.cpp  cam3.cpp  cam4.cpp  lap.cpp
